# yate-g729

./: .gitmodules  CMakeLists.txt  library.cpp  library.h
yate/: yateclass.h  yatengine.h  yatephone.h
